--- a/app/views/finance_records/_top_bar.html.haml
+++ b/app/views/finance_records/_top_bar.html.haml
@@ -16,10 +16,10 @@
       %li.divider
       %li
         = link_to "Download as CSV", company_book_finance_records_path(@company, @book, format: "csv",
-        t: params[:t], s: params[:s])
+        t: params[:t], s: params[:s], st: params[:st], et: params[:et])
       %li
         = link_to "Download as Excel", company_book_finance_records_path(@company, @book, format: "xls",
-        t: params[:t], s: params[:s])
+        t: params[:t], s: params[:s], st: params[:st], et: params[:et])
       %li.divider
       %li
         = link_to raw('<span class="glyphicon glyphicon-user"></span> Signout'), destroy_user_session_path,
