date seaarch implemented

--- a/app/views/finance_records/_advanced_search.haml
+++ b/app/views/finance_records/_advanced_search.haml
@@ -11,8 +11,8 @@
           = search_field_tag :s, params[:s], placeholder: "Search what?"
           = select_tag :t, options_for_select(record_status_options, selected: params[:t]),
             prompt: "All Records"
-          = datetime_field_tag :st, params[:st]
-          = datetime_field_tag :et, params[:et]
+          = datetime_field_tag :st, params[:st], placeholder: "yyyy-mm-dd"
+          = datetime_field_tag :et, params[:et], placeholder: "yyyy-mm-dd"
           = submit_tag "Search"
       .modal-footer
         %button.btn.btn-default{"data-dismiss" => "modal", :type => "button"} Close
