--- a/app/views/finance_records/_top_bar.html.haml
+++ b/app/views/finance_records/_top_bar.html.haml
@@ -26,3 +26,5 @@
           method: :delete
   .pull-right
     = render partial: "common/search_form"
+
+  = hidden_field_tag :company_id, @company.id
