contaxct displayed in records page

--- a/app/views/finance_records/index.html.haml
+++ b/app/views/finance_records/index.html.haml
@@ -7,6 +7,8 @@
       %li= "Income: #{@book.currency} #{@income}"
       %li= "Balance: #{@book.currency} #{@balance}"
 
+.contact= render partial: "contact" if @contact
+
 %table.table
   %tr
     %th Sno
