advanced search bug fixed

--- a/app/views/finance_records/_form.html.haml
+++ b/app/views/finance_records/_form.html.haml
@@ -24,3 +24,5 @@
       = f.select :status, record_status_options, class: "form-control"
   .actions.col-sm-offset-2.col-sm-6
     = f.submit 'Save', class: "btn btn-default"
+
+= render partial: "advanced_search"
