not permitted page added

--- a/app/views/static/not_permitted.html.haml
+++ b/app/views/static/not_permitted.html.haml
@@ -1,2 +1,8 @@
-%h1 Static#not_permitted
-%p Find me in app/views/static/not_permitted.html.haml
+.row
+  .col-md-4.col-md-offset-4
+    %h1 Not Permitted
+    %p
+      You are not permitted to use this software yet. Please aak the admin to
+      permit you. Or better fork it from
+      = link_to "https://github.com/mindaslab/erp"
+      and have your own server than to beg for permission from some jerk.      
