--- a/app/assets/stylesheets/common.sass
+++ b/app/assets/stylesheets/common.sass
@@ -1,6 +1,6 @@
 .align-left
   text-align: left
-  
+
 ul.side-panel
   margin: 0px
   padding: 0px
@@ -17,3 +17,7 @@ footer
     li
       display: inline
       margin-right: 8px
+
+.better-text-area
+  textarea
+    height: 150px
