--- a/app/views/companies/_company.html.haml
+++ b/app/views/companies/_company.html.haml
@@ -1,4 +1,4 @@
-.col-md-6
+.col-md-6.company-tile
   .panel.panel-primary
     .panel-heading
       .panel-title= link_to company.name, company_books_path(company)
