--- a/app/views/finance_records/show.html.haml
+++ b/app/views/finance_records/show.html.haml
@@ -35,6 +35,8 @@
   - else
     = render partial: "record_contact"
 .row
+  .col-md-12= render partial: "versions"
+.row
   .col-md-8
     %h2 Notes
     = render partial: "notes/form"
