alert and notice looks good

--- a/app/views/common/_alerts.haml
+++ b/app/views/common/_alerts.haml
@@ -1,6 +1,8 @@
 - unless notice.nil?
-  %button.close{"aria-hidden" => "true", "data-dismiss" => "alert", type: "button"} ×
-  .alert.alert-success.fade.in= notice
+  .alert.alert-success.fade.in
+    %button.close{"aria-hidden" => "true", "data-dismiss" => "alert", type: "button"} ×
+    = notice
 - unless alert.nil?
-  %button.close{"aria-hidden" => "true", "data-dismiss" => "alert", type: "button"} ×
-  .alert.alert-success.fade.in= alert
+  .alert.alert-success.fade.in
+    %button.close{"aria-hidden" => "true", "data-dismiss" => "alert", type: "button"} ×
+    = alert
