alert color changed

--- a/app/views/common/_alerts.haml
+++ b/app/views/common/_alerts.haml
@@ -3,6 +3,6 @@
     %button.close{"aria-hidden" => "true", "data-dismiss" => "alert", type: "button"} ×
     = notice
 - unless alert.nil?
-  .alert.alert-success.fade.in
+  .alert.alert-danger.fade.in
     %button.close{"aria-hidden" => "true", "data-dismiss" => "alert", type: "button"} ×
     = alert
