--- a/app/views/finance_records/show.html.haml
+++ b/app/views/finance_records/show.html.haml
@@ -41,7 +41,7 @@
     %h2 Notes
     = render partial: "notes/form"
     %hr
-    = render @record.notes
+    #all-notes= render @record.notes
   .col-md-4
     %h2 Files
     = render partial: "docs/form"
