--- a/app/views/notes/_form.html.haml
+++ b/app/views/notes/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for [@company, @book, @record, @note] do |f|
+= form_for([@company, @book, @record, @note], remote: true) do |f|
   - if @note.errors.any?
     #error_explanation
       %h2= "#{pluralize(@note.errors.count, "error")} prohibited this note from being saved:"
