added friends menu to company drop down

--- a/app/views/common/_jump_around.haml
+++ b/app/views/common/_jump_around.haml
@@ -5,3 +5,5 @@
     = link_to "Books", company_books_path(@company)
   %li
     = link_to "Contacts", company_contacts_path(@company)
+  %li
+    = link_to "Friends", friends_company_path(@company)
