some spell check done

--- a/app/views/static/not_permitted.html.haml
+++ b/app/views/static/not_permitted.html.haml
@@ -2,7 +2,7 @@
   .col-md-4.col-md-offset-4
     %h1 Not Permitted
     %p
-      You are not permitted to use this software yet. Please aak the admin to
+      You are not permitted to use this software yet. Please ask the admin to
       permit you. Or better fork it from
       = link_to "https://github.com/mindaslab/erp"
-      and have your own server than to beg for permission from some jerk.      
+      and have your own server than to beg for permission from some jerk.
