--- a/app/views/finance_records/_finance_record.haml
+++ b/app/views/finance_records/_finance_record.haml
@@ -12,4 +12,4 @@
     = link_to "Edit", edit_company_book_finance_record_path(finance_record.book.company, finance_record.book, finance_record),
       class: "btn btn-default btn-sm"
     = link_to "Delete", company_book_finance_record_path(finance_record.book.company, finance_record.book, finance_record),
-      method: :delete, confirm: "Really want to delete record?", class: "btn btn-default btn-sm"
+      method: :delete, "data-confirm" => "Really want to delete record?", class: "btn btn-default btn-sm"
