--- a/app/views/finance_records/show.html.haml
+++ b/app/views/finance_records/show.html.haml
@@ -23,7 +23,7 @@
       = link_to "Edit", edit_company_book_finance_record_path(@company, @book, @record),
       class: "btn btn-xs btn-warning"
       = link_to "Delete", company_book_finance_record_path(@company, @book, @record),
-      class: "btn btn-xs btn-danger", confirm: "Really want to delete record?",
+      class: "btn btn-xs btn-danger", "data-confirm" => "Really want to delete record?",
       method: :delete
   - unless @record.contact
     .col-md-4#contact-search
