--- a/app/views/notes/_note.haml
+++ b/app/views/notes/_note.haml
@@ -1,5 +1,5 @@
 %p
-  = note.content
+  = raw hash_link note
   %br
   = link_to "Delete", company_book_finance_record_note_path(note.company,
     note.book, note.finance_record, note), method: "Delete",
