--- a/app/views/books/_form.html.haml
+++ b/app/views/books/_form.html.haml
@@ -1,10 +1,12 @@
 = form_for([@company, @book], html:{class: "form-horizontal"}) do |f|
   - if @book.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@book.errors.count, "error")} prohibited this book from being saved:"
-      %ul
-        - @book.errors.full_messages.each do |msg|
-          %li= msg
+    .field.form-group
+      .col-sm-6.col-md-offset-2
+        #error_explanation
+          %h2= "#{pluralize(@book.errors.count, "error")} prohibited this book from being saved:"
+          %ul
+            - @book.errors.full_messages.each do |msg|
+              %li= msg
 
   .field.form-group
     = f.label :name, class: "col-sm-2 control-label"
