--- a/app/views/contacts/_form.html.haml
+++ b/app/views/contacts/_form.html.haml
@@ -1,10 +1,12 @@
 = form_for([@company, @contact], html:{class: "form-horizontal"}) do |f|
   - if @contact.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@contact.errors.count, "error")} prohibited this contact from being saved:"
-      %ul
-        - @contact.errors.full_messages.each do |msg|
-          %li= msg
+    .field.form-group
+      .col-sm-6.col-md-offset-2
+        #error_explanation
+          %h2= "#{pluralize(@contact.errors.count, "error")} prohibited this contact from being saved:"
+          %ul
+            - @contact.errors.full_messages.each do |msg|
+              %li= msg
 
   .field.form-group
     = f.label :name, "Name / Organizatiion", class: "col-sm-2 control-label"
