--- a/app/views/finance_records/_form.html.haml
+++ b/app/views/finance_records/_form.html.haml
@@ -1,10 +1,12 @@
 = form_for([@company, @book, @record], html:{class: "form-horizontal"}) do |f|
   - if @record.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@record.errors.count, "error")} prohibited this record from being saved:"
-      %ul
-        - @record.errors.full_messages.each do |msg|
-          %li= msg
+    .field.form-group
+      .col-sm-6.col-md-offset-2
+        #error_explanation
+          %h2= "#{pluralize(@record.errors.count, "error")} prohibited this record from being saved:"
+          %ul
+            - @record.errors.full_messages.each do |msg|
+              %li= msg
 
   .field.form-group
     = f.label :amount, class: "col-sm-2 control-label"
