--- a/app/views/common/_footer.html.haml
+++ b/app/views/common/_footer.html.haml
@@ -1,7 +1,8 @@
 .row
-  %footer
-    %hr
-    %ul
-      %li= link_to "Updates", "https://dspora.org/u/coin71"
-      %li= link_to "Code", "https://github.com/mindaslab/erp"
-      %li= link_to "Gitter", "https://gitter.im/mindaslab/erp"
+  .col-md-12
+    %footer
+      %hr
+      %ul
+        %li= link_to "Updates", "https://dspora.org/u/coin71"
+        %li= link_to "Code", "https://github.com/mindaslab/erp"
+        %li= link_to "Gitter", "https://gitter.im/mindaslab/erp"
