--- a/app/views/finance_records/show.html.haml
+++ b/app/views/finance_records/show.html.haml
@@ -37,12 +37,12 @@
 .row
   .col-md-12= render partial: "versions"
 .row
-  .col-md-8
+  .col-md-6
     %h2 Notes
     = render partial: "notes/form"
     %hr
     #all-notes= render @record.notes
-  .col-md-4
+  .col-md-5.col-md-offset-1
     %h2 Files
     = render partial: "docs/form"
     %ul= render @record.docs
