error in show page  rectified

--- a/app/views/finance_records/show.html.haml
+++ b/app/views/finance_records/show.html.haml
@@ -18,7 +18,7 @@
       %p= @record.description
     %p
       %b Status:
-      = @record.status
+      = @record.transaction
     %p
       = link_to "Edit", edit_company_book_finance_record_path(@company, @book, @record),
       class: "btn btn-xs btn-warning"
